--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "lint:fix": "next lint --fix"
   },
   "dependencies": {
+    "@heroui/react": "2.6.14",
     "@hookform/resolvers": "^3.9.1",
     "@internationalized/date": "^3.6.0",
-    "@heroui/react": "2.6.14",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
@@ -53,6 +53,7 @@
     "@typescript-eslint/parser": "^8.18.0",
     "eslint": "^9.17.0",
     "eslint-config-next": "15.0.2",
+    "eslint-config-prettier": "^10.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
