--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@heroui/react": "2.6.14",
     "@hookform/resolvers": "^3.9.1",
     "@internationalized/date": "^3.6.0",
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-scroll-area": "^1.2.2",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.1",
     "@react-types/shared": "^3.26.0",
     "@tanstack/react-query": "^5.64.0",
@@ -53,7 +55,6 @@
     "@typescript-eslint/parser": "^8.18.0",
     "eslint": "^9.17.0",
     "eslint-config-next": "15.0.2",
-    "eslint-config-prettier": "^10.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
