--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroui/react": "2.6.14",
     "@hookform/resolvers": "^3.9.1",
     "@internationalized/date": "^3.6.0",
+    "@next/bundle-analyzer": "^15.2.1",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.4",
