--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "date-fns": "^3.0.0",
     "framer-motion": "^11.13.1",
     "immer": "^10.1.1",
+    "laventana": "file:",
     "lucide-react": "^0.469.0",
     "next": "15.0.2",
     "next-intl": "^3.26.3",
