--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
+          pnpm-version: '9.13.0'
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
