--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,9 +15,10 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 20.17
+
       - name: Install pnpm
-        run: npm install -g pnpm@latest
+        run: npm install -g pnpm@9.13.0
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
