--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,21 +15,23 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20.17
+          node-version: 20
+          cache: 'pnpm'
 
-      - name: Install pnpm
-        run: npm install -g pnpm@9.13.0
+      - name: Enable Corepack and install pnpm 9.13.0
+        run: |
+          corepack enable
+          corepack prepare pnpm@9.13.0 --activate
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      # - name: Run tests
-      #   run: npm test
+      - name: Build project
+        run: pnpm run build
 
       - name: Deploy to Vercel
-        uses: amondnet/vercel-action@v25.2.0
+        uses: vercel/action@v25.2.0
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          vercel-args: '--prod' # Overwriting
-          # scope: tu-org  # Org
+          # vercel-args: --prod
