--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,10 +18,13 @@ jobs:
           node-version: 20
           cache: 'pnpm'
 
-      - name: Enable Corepack and install pnpm 9.13.0
+      - name: Install pnpm 9.13.0 via Corepack
         run: |
           corepack enable
           corepack prepare pnpm@9.13.0 --activate
+
+      - name: Verify pnpm version
+        run: pnpm --version
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
